--- a/index.html
+++ b/index.html
@@ -5,13 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eduardo Beretta</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="public/style.css">
 </head>
 
 <body>
-<section id="home-page">
-<h1>teste</h1>
-</section>
+
+  <div id="navbar"></div>
+  <script>
+    //Carregar conteúdo do navbar
+    fetch('navbar.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('navbar').innerHTML = data;
+      })
+      .catch(error => {
+        console.error('Erro ao carregar o navbar:', error);
+      });
+  </script>
+
+    <section id="home-page">
+        <img src="public/svgs/fundo-preto.svg" class="fundo">
+        <div class="fundo-retangulo"></div>
+    </section>
 
 
 
