--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eduardo Beretta</title>
-    <link rel="stylesheet" href="public/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Eduardo Beretta</title>
+  <link rel="stylesheet" href="public/style.css">
 </head>
 
 <body>
@@ -23,14 +23,23 @@
       });
   </script>
 
-    <section id="home-page">
-        <img src="public/svgs/fundo-preto.svg" class="fundo">
-        <div class="fundo-retangulo"></div>
-    </section>
+  <section id="home-page">
+    <img src="public/svgs/fundo-preto.svg" class="fundo">
+    <div class="fundo-retangulo"></div>
+
+    <div class="text-home">
+      <h1 class="title">EDUARDO BERETTA</h1>
+      <p class="subtitle">PROGRAMADOR</p>
+    </div>
+    <div class=" container-cubo">
+      <img src="public/imgs/bola-verde.png" alt="efeito de luz" class="bola">
+      <img src="public/svgs/cubo.svg" alt="cubo" class="cubo">
+    </div>
+  </section>
 
 
 
-    <script src="javascript/script.js"></script>
+  <script src="javascript/script.js"></script>
 </body>
 
 </html>
