--- a/navbar.html
+++ b/navbar.html
@@ -1,17 +1,15 @@
 <nav>
-  <a href="index.html" class="logo-link">
+  <a href="index.html#home-page" class="logo-link">
     <img src="public/svgs/logo.svg" alt="Logo" class="logo">
   </a>
 
-    <ul class="nav-links">
-    <li><a href="index.html#page-home" class="nav-link">Início</a></li>
+  <ul class="nav-links">
+    <li><a href="index.html#home-page" class="nav-link">Início</a></li>
     <li><a href="index.html#sobre" class="nav-link">Sobre</a></li>
-    <li>
-      <a href="index.html#projetos" class="nav-link projetos-link">Projetos</a>
-    </li>
+    <li><a href="index.html#projetos" class="nav-link projetos-link">Projetos</a></li>
   </ul>
-
-  <a href="index.html#contato" class="contato-btn nav-contato">
-    <img src="css/seta.svg" class="seta"> Contato
-  </a>
 </nav>
+
+<a href="index.html#contato" class="nav-contato contato-btn">
+  Contato
+</a>
