--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eduardo Beretta</title>
   <link rel="stylesheet" href="public/style.css">
+  <link rel="shortcut icon" href="public/svgs/logo.svg" type="image/x-icon">
 </head>
 
 <body>
@@ -31,12 +32,29 @@
       <h1 class="title">EDUARDO BERETTA</h1>
       <p class="subtitle">PROGRAMADOR</p>
     </div>
+
+    <div class="social-container">
+      <a href="https://www.linkedin.com/in/eduardo-beretta-a597ba356/" target="_blank" class="social-link">
+        <img src="public/svgs/linkedin.svg" alt="LinkedIn" class="social-icon">
+      </a>
+      <a href="https://github.com/eduardoberettarod" target="_blank" class="social-link">
+        <img src="public/svgs/github.svg" alt="GitHub" class="social-icon">
+      </a>
+    </div>
+
     <div class=" container-cubo">
       <img src="public/imgs/bola-verde.png" alt="efeito de luz" class="bola">
       <img src="public/svgs/cubo.svg" alt="cubo" class="cubo">
     </div>
+    <div class="scroll">
+      <p>SCROLL</p>
+    </div>
   </section>
-
+<section id="sobre">
+  <div class="container-corrente">
+    <img src="public/svgs/corrente.svg" class="corrente" alt="corrente">
+  </div>
+</section>
 
 
   <script src="javascript/script.js"></script>
