--- a/index.html
+++ b/index.html
@@ -51,16 +51,22 @@
     </div>
   </section>
 <section id="sobre">
-  <div class="container-corrente">
-    <img src="public/svgs/corrente.svg" class="corrente" alt="corrente">
+    <div class="container-hand">
+    <img src="public/svgs/hand.svg" class="hand" alt="Mão">
   </div>
   <div class="container-sobre">
     <h1 class="titulo-sobre">Sobre</h1>
     <p class="texto-sobre">Sou um desenvolvedor web com experiência em criar aplicações modernas, funcionais e responsivas. Tenho como objetivo transformar ideias em soluções digitais eficientes, combinando design intuitivo com código de qualidade. Minha paixão pela tecnologia me impulsiona a explorar novas ferramentas, metodologias e linguagens, sempre em busca de aprimoramento e inovação. E sou muito fã do homem de ferro</p>
   </div>
 </section>
+<section id="projetos">
 
-
+</section>
+<section id="contato">
+  <div class="container-corrente">
+    <img src="public/svgs/corrente.svg" class="corrente" alt="corrente">
+  </div>
+</section>
   <script src="javascript/script.js"></script>
 </body>
 
