--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
   </section>
 <section id="sobre">
     <div class="container-hand">
+       <img src="public/svgs/fundo-verde.svg" class="fundo-verde">
     <img src="public/svgs/hand.svg" class="hand" alt="Mão">
+    <img src="public/svgs/curriculo-verde.svg" class="curriculo" alt="curriculo">
   </div>
   <div class="container-sobre">
     <h1 class="titulo-sobre">Sobre</h1>
