--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
       <a href="https://github.com/eduardoberettarod" target="_blank" class="social-link">
         <img src="public/svgs/github.svg" alt="GitHub" class="social-icon">
       </a>
+      <a href="public/assets/curriculo.pdf" download="curriculo-eduardo-beretta.pdf" class="social-link">
+        <img src="public/svgs/file-earmark-person-fill.svg" alt="Baixar Currículo" class="social-icon">
+      </a>
     </div>
 
     <div class=" container-cubo">
@@ -50,25 +53,31 @@
       <p>SCROLL</p>
     </div>
   </section>
-<section id="sobre">
+  <section id="sobre">
     <div class="container-hand">
-       <img src="public/svgs/fundo-verde.svg" class="fundo-verde">
-    <img src="public/svgs/hand.svg" class="hand" alt="Mão">
-    <img src="public/svgs/curriculo-verde.svg" class="curriculo" alt="curriculo">
-  </div>
-  <div class="container-sobre">
-    <h1 class="titulo-sobre">Sobre</h1>
-    <p class="texto-sobre">Sou um desenvolvedor web com experiência em criar aplicações modernas, funcionais e responsivas. Tenho como objetivo transformar ideias em soluções digitais eficientes, combinando design intuitivo com código de qualidade. Minha paixão pela tecnologia me impulsiona a explorar novas ferramentas, metodologias e linguagens, sempre em busca de aprimoramento e inovação. E sou muito fã do homem de ferro</p>
-  </div>
-</section>
-<section id="projetos">
+      <img src="public/svgs/fundo-verde.svg" class="fundo-verde">
+      <img src="public/svgs/hand.svg" class="hand" alt="Mão">
+      <div class="curriculo-wrapper">
+        <img src="public/svgs/curriculo-verde.svg" class="curriculo" alt="curriculo">
+      </div>
 
-</section>
-<section id="contato">
-  <div class="container-corrente">
-    <img src="public/svgs/corrente.svg" class="corrente" alt="corrente">
-  </div>
-</section>
+    </div>
+    <div class="container-sobre">
+      <h1 class="titulo-sobre">Sobre</h1>
+      <p class="texto-sobre">Sou um desenvolvedor web com experiência em criar aplicações modernas, funcionais e
+        responsivas. Tenho como objetivo transformar ideias em soluções digitais eficientes, combinando design intuitivo
+        com código de qualidade. Minha paixão pela tecnologia me impulsiona a explorar novas ferramentas, metodologias e
+        linguagens, sempre em busca de aprimoramento e inovação. E sou muito fã do homem de ferro</p>
+    </div>
+  </section>
+  <section id="projetos">
+
+  </section>
+  <section id="contato">
+    <div class="container-corrente">
+      <img src="public/svgs/corrente.svg" class="corrente" alt="corrente">
+    </div>
+  </section>
   <script src="javascript/script.js"></script>
 </body>
 
