--- a/navbar.html
+++ b/navbar.html
@@ -6,7 +6,8 @@
   <ul class="nav-links">
     <li><a href="index.html#home-page" class="nav-link">Início</a></li>
     <li><a href="index.html#sobre" class="nav-link">Sobre</a></li>
-    <li><a href="index.html#projetos" class="nav-link projetos-link">Projetos</a></li>
+    <li><a href="index.html#projetos" class="nav-link">Projetos</a></li>
+    <li><a href="index.html#serviços" class="nav-link">Serviços</a></li>
   </ul>
 </nav>
 
