--- a/index.html
+++ b/index.html
@@ -73,6 +73,65 @@
   <section id="projetos">
 
   </section>
+  <section id="serviços">
+    <div class="container-linha">
+      <img class="linha" src="public/svgs/linha.svg" alt="efeito visual">
+    </div>
+    <div class="container-serviços">
+      <h1 class="titulo-serviços">
+        Serviços
+      </h1>
+      <div class="container-skills">
+        <div class="container-tecnologias">
+          <h2>
+            Tecnologias
+          </h2>
+          <div class="icons-tecnologias">
+            <div class="tecnologia-card">
+              <img src="public/svgs/bootstrap.svg" alt="Bootstrap" class="tecnologias">
+              <span>Bootstrap</span>
+            </div>
+
+            <div class="tecnologia-card">
+              <img src="public/svgs/html.svg" alt="HTML" class="tecnologias">
+              <span>HTML</span>
+            </div>
+
+            <div class="tecnologia-card">
+              <img src="public/svgs/css.svg" alt="CSS" class="tecnologias">
+              <span>CSS</span>
+            </div>
+
+            <div class="tecnologia-card">
+              <img src="public/svgs/github.svg" alt="GitHub" class="tecnologias">
+              <span>GitHub</span>
+            </div>
+
+            <div class="tecnologia-card">
+              <img src="public/svgs/javascript.svg" alt="JavaScript" class="tecnologias">
+              <span>JavaScript</span>
+            </div>
+
+            <div class="tecnologia-card">
+              <img src="public/svgs/python.svg" alt="Python" class="tecnologias">
+              <span>Python</span>
+            </div>
+
+            <div class="tecnologia-card">
+              <img src="public/svgs/react.svg" alt="React" class="tecnologias">
+              <span>React</span>
+            </div>
+
+            <div class="tecnologia-card">
+              <img src="public/svgs/git.svg" alt="Git" class="tecnologias">
+              <span>Git</span>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </section>
   <section id="contato">
     <div class="container-corrente">
       <img src="public/svgs/corrente.svg" class="corrente" alt="corrente">
