--- a/index.html
+++ b/index.html
@@ -81,6 +81,46 @@
       <h1 class="titulo-serviços">
         Serviços
       </h1>
+      <div class="cards-servicos">
+
+        <div class="servico-card">
+          <div class="servico-header">
+            <h3>Criação de Sites Responsivos</h3>
+            <span class="status disponivel">Disponível</span>
+          </div>
+          <ul>
+            <li>Design moderno e adaptável</li>
+            <li>Performance otimizada</li>
+            <li>Compatível com todos os dispositivos</li>
+          </ul>
+        </div>
+
+        <div class="servico-card">
+          <div class="servico-header">
+            <h3>Aplicações Web Interativas</h3>
+            <span class="status em-breve">Em breve</span>
+          </div>
+          <ul>
+            <li>Interfaces dinâmicas</li>
+            <li>Integração com APIs</li>
+            <li>Experiência fluida</li>
+          </ul>
+        </div>
+
+        <div class="servico-card">
+          <div class="servico-header">
+            <h3>Teste de Penetração (Pentest)</h3>
+            <span class="status em-breve" id="diferente">Em breve</span>
+          </div>
+          <ul>
+            <li>Identificação de vulnerabilidades</li>
+            <li>Relatórios detalhados</li>
+            <li>Correções recomendadas</li>
+          </ul>
+        </div>
+
+      </div>
+
       <div class="container-skills">
         <div class="container-tecnologias">
           <h2>
