--- a/index.html
+++ b/index.html
@@ -176,7 +176,15 @@
     <div class="container-corrente">
       <img src="public/svgs/corrente.svg" class="corrente" alt="corrente">
     </div>
+
+    <div class="container-contato">
+      <h1 class="titulo-contato">Contato</h1>
+    </div>
+
   </section>
+  <footer>
+
+  </footer>
   <script src="javascript/script.js"></script>
 </body>
 
