--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
   </section>
   <section id="sobre">
     <div class="container-hand">
-      <img src="public/svgs/fundo-verde.svg" class="fundo-verde">
       <img src="public/svgs/hand.svg" class="hand" alt="Mão">
       <div class="curriculo-wrapper">
         <img src="public/svgs/curriculo-verde.svg" class="curriculo" alt="curriculo">
@@ -71,6 +70,48 @@
     </div>
   </section>
   <section id="projetos">
+    <span class="circulo"></span>
+    <span class="circulo"></span>
+
+    <div class="container-projetos">
+      <h1 class="titulo-projetos">Projetos</h1>
+      <div class="cards-projetos">
+        <div class="projeto-item">
+          <a href="https://eduardoberettarod.github.io/CyberLab/" target="_blank" class="projeto-img-wrapper">
+            <img src="public/imgs/cyberlab.png" alt="projeto cyberlab">
+          </a>
+          <h2>CyberLab</h2>
+          <a class="ver-github" href="https://github.com/eduardoberettarod/CyberLab" target="_blank">Ver no GitHub</a>
+          <p>
+            Plataforma educacional interativa sobre cibersegurança, com recursos 3D e animações avançadas.
+          </p>
+          <button class="botao-fullscreen"></button>
+        </div>
+
+        <div class="projeto-item">
+          <a href="https://eduardoberettarod.github.io/RastroUrbanoGitDesktop/" target="_blank"
+            class="projeto-img-wrapper">
+            <img src="public/imgs/rastro-urbano.png" alt="projeto rastro-urbano">
+          </a>
+          <h2 id="rastro-urbano">Rastro Urbano</h2>
+          <a class="ver-github" href="https://github.com/eduardoberettarod/RastroUrbanoGitDesktop" target="_blank">Ver
+            no GitHub</a>
+          <p>Loja virtual responsiva com design moderno e interações dinâmicas.</p>
+          <button class="botao-fullscreen"></button>
+        </div>
+
+        <div class="projeto-item">
+          <a href="https://eduardoberettarod.github.io/Portfolio-EB/" target="_blank" class="projeto-img-wrapper">
+            <img src="public/imgs/portfolio.png" alt="projeto portfolio">
+          </a>
+          <h2>Portfólio</h2>
+          <a class="ver-github" href="https://github.com/eduardoberettarod/Portfolio-EB" target="_blank">Ver no
+            GitHub</a>
+          <p>Site responsivo para apresentar meus projetos, construído com React e Bootstrap.</p>
+          <button class="botao-fullscreen"></button>
+        </div>
+      </div>
+    </div>
 
   </section>
   <section id="serviços">
